--- a/lib/templates/scss_retina.template.handlebars
+++ b/lib/templates/scss_retina.template.handlebars
@@ -67,6 +67,13 @@ ${{retina_groups_info.strings.name}}: ({{#each retina_groups}}${{strings.name_gr
     @include sprite-background-size($normal-sprite);
   }
 }
+
+// Validates the variable given to the mixin retina-sprite
+@mixin validate-retina-group($retina-group) {
+    @if type-of($retina-group[0]) != string or type-of($retina-group[1]) != list or type-of($retina-group[2]) != list {
+      @error('A wrong variable was given to the mixin retina-sprite. Here is its value: #{$retina-group}');
+    }
+}
 {{/if}}
 {{/content}}
 
